--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^10.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "next": "12",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.11.1",
